made amendments to white text boxes on all pages so they all match and align correctly. changed text in reviews to correct text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ background-color: rgba(255, 255, 255, 0.6);
  }
 
 .signupbutton {
-    margin-top: -50px;
+    margin-top: -100px;
     font-size: 300px;
     padding: 0 450px;
 }
@@ -187,6 +187,7 @@ body{margin-top:20px;}
     color: #222;
 }
 .font-cond-b {
+    padding-top: 20px;
     font-weight: 700 !important;
     font-size: 60px;
     color: #646464;
@@ -204,7 +205,8 @@ body{margin-top:20px;}
 
 .reviewdiv {
     margin-top: 100px;
-    margin-left: 60px;
+    margin-left: 120px;
+    width: 80%;
     background-color: white;
     border-radius: 8px;
     opacity: 90%;
@@ -263,27 +265,25 @@ text-align: center;
 /*-------------------- Contact Section ------------------*/
 
 .faqdiv, .contactdiv {
- margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 300px;
+    margin-bottom: 100px;
   text-align: center;
-  margin-bottom: 100px;
-  width: 80%;
+
 
 }
 
 .faqdiv {
-    margin-top: 150px;
-    padding-bottom: 10px;
-    width: 90%;
+ margin-top: 150px;
 }
 
 .contactdiv {
-    margin-top: 100px;
+margin-top: 100px;
     
 }
 
 .contactdiv form input{
     width: 80%;
+  
 }
 
 #submitbutton {
